# Idempotency-Middleware

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/config/: redis_config.py
app/middleware/: idempotency.py
app/routers/: payments.py
app/services/: payment_service.py
idempotency-middleware/app/: __init_.py  main.py
idempotency-middleware/app/adapters/: django_adapter.py  fastapi_adapter.py  flask_adapter.py
idempotency-middleware/app/config/: redis_config.py
idempotency-middleware/app/core/: shield_core.py
