[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-idempotency-shield"
version = "1.0.0"
authors = [
    { name = "Komal", email = "your.email@example.com" }
]
description = "An enterprise distributed idempotency middleware shield for FastAPI backed by Redis."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.100.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0"
]

[tool.setuptools.packages.find]
where = ["."]